<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Please Input Your Name:"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="Name"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="204dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_course"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Registered Course:"
                        android:textSize="20sp" />

                    <RadioGroup
                        android:id="@+id/rg_course"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/rb_cn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="CN"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/rb_cs"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="CS"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/rb_ct"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="CT"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/rb_ia"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="IA"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/rb_ib"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="IB"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/rb_ir"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="IR"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/rb_det"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="DET"
                            android:textSize="20sp" />
                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Year:"
                        android:textSize="20sp" />

                    <RadioGroup
                        android:id="@+id/rg_year"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RadioButton
                            android:id="@+id/rb_y1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Y1"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/rb_y2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Y2"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/rb_y3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Y3"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/rb_y4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Y4"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/rb_y5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Y5"
                            android:textSize="20sp" />

                        <RadioButton
                            android:id="@+id/rb_y6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Y6"
                            android:textSize="20sp" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Registered Subjects:"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/cb_stat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_stat"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/cb_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_data"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/cb_prog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_prog"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/cb_aa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_aa"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/cb_graphics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_graphics"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/cb_sof"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_software"
                android:textSize="20sp" />

            <Button
                android:id="@+id/sb_but"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Submit"
                android:textSize="20sp" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>